Add Swagger annotations for all endpoints of the API
